...
      throw error;
    }
  };

  const handleLogin = async () => {
    if (!form.identifier || !form.password) {
      Alert.alert("Error", "Please fill in all fields");
      return;
    }
    console.log(`Logged In`);
    setIsSubmitting(true);
    // console.log(AUTH_KEY);
    try {
      const response = await axios.post(
        `${API_URL}/auth/login`,
        {
          identifier: form.identifier,
          password: form.password,
        },
        {
          headers: {
...
          <View className="flex-row items-center">
            <Image
              source={images.logo}
              resizeMode="contain"
              className="w-[100px] h-[100px] mr-3"
            />
            <Text className="font-psemibold text-3xl">PAL-AI</Text>
          </View>
          <Text className="font-psemibold text-3xl mt-6">Log in</Text>
          <Text className="text-lg">Welcome! Please enter your details.</Text>
          <TextInput
            testID="userLOGIN"
            label="Username / Email"
            value={form.identifier}
            onChangeText={(text) => setForm({ ...form, identifier: text })}
            className="w-full mt-3"
            mode="outlined"
            activeOutlineColor="#006400"
            outlineColor="#CBD2E0"
            textColor="#2D3648"
            theme={{ colors: { background: 'white' } }}
            style={{ backgroundColor: 'white' }}
          />
          <TextInput
            testID="passLOGIN"
            label="Password"
            value={form.password}
            onChangeText={(text) => setForm({ ...form, password: text })}
            secureTextEntry={!passwordVisible}
            right={
              <TextInput.Icon
                icon={passwordVisible ? "eye-off" : "eye"}
...
