...
            <Button
              icon="photo-library"
              onPress={pickImageFromGallery}
              size={40}
            />
            <Button
              testID="capture"
              icon="camera"
              size={60}
              style={{ height: 60 }}
              onPress={takePicture}
            />
            <Button
...
                setImage(null);
                setPredictions(null);
                pickImageFromGallery();
              }}
            />
            <Button
              testID="check"
              icon="check"
              onPress={async () => {
                try {
                  await savePicture();
                } catch (error) {
                  console.error("Error saving picture:", error);
...
