...
            headerShown: false,
            tabBarButton: () => null,
          }}
        />
        {/* Dummy tab for spacing */}
        <Tabs.Screen
          testID="captureBtn"
          name="empty"
          options={{
            title: "Camera",
            headerShown: false,
            // Non-interactive custom tab button
            tabBarButton: (props) => (
...
