...

  const data = [
    { label: "Male", value: "male" },
    { label: "Female", value: "female" },
  ];
...
                  }}
                >
                  PAL-AI
                </Text>
              </View>
...
                }}
              >
                Sign-Up
              </Text>
              <Text
...
                <TextInput
                  testID="inputFirstname"
                  label="First Name"
                  value={form.firstname}
                  onChangeText={handleChangeFirstName}
...
                <TextInput
                  testID="inputLastname"
                  label="Last Name"
                  value={form.lastname}
                  onChangeText={handleChangeLastName}
...
                  <TextInput
                    testID="inputBirthdate"
                    label="Birthdate"
                    value={form.birthdate}
                    editable={false}
...
                    labelField="label"
                    valueField="value"
                    placeholder="Gender"
                    value={selectedGender}
                    onChange={(item) => {
...
              <TextInput
                testID="inputEmail"
                label="Email"
                value={form.email}
                onChangeText={handleChangeEmail}
...
              <TextInput
                testID="inputNumber"
                label="Mobile Number"
                value={form.mobilenumber}
                keyboardType="numeric"
...
              <TextInput
                testID="inputUsername"
                label="Username"
                value={form.username}
                onChangeText={handleChangeUsername}
...
              <TextInput
                testID="inputEXp"
                label="Years of Farming Experience"
                value={form.yearsOfExperience}
                onChangeText={handleChangeYearsOfExperience}
...
                    labelField="label"
                    valueField="value"
                    placeholder={isLoading.regions ? "Loading..." : "Region"}
                    value={form.region}
                    onChange={(item) => {
...
                    valueField="value"
                    placeholder={
                      isLoading.provinces ? "Loading..." : "Province"
                    }
                    value={form.province}
...
                    valueField="value"
                    placeholder={
                      isLoading.cities ? "Loading..." : "City/Municipality"
                    }
                    value={form.city}
...
                    valueField="value"
                    placeholder={
                      isLoading.barangays ? "Loading..." : "Barangay"
                    }
                    value={form.barangay}
...
              <TextInput
                testID="inputPassword"
                label="Password"
                value={form.password}
                onChangeText={handleChangePassword}
...
              <TextInput
                testID="inputConfirmPassword"
                label="Confirm Password"
                value={form.confirmpassword}
                onChangeText={handleConfirmPassword}
...
              <CustomButton
                testID="signinButton"
                title="Sign Up"
                handlePress={handleSignUp}
                containerStyles={{
...
