...
      if (response.data.message) {
        Alert.alert(
          "Success",
          "Password changed successfully",
          [
            {
              text: "OK",
              onPress: () => router.push("/sign-in")
            }
          ]
        );
      }
    } catch (error) {
...
