...
  getBarangaysByMunicipality,
} from "@aivangogh/ph-address";
import { Dropdown } from "react-native-element-dropdown";

const API_URL = API_URL_BCNKEND;

const Profile = () => {
  const { user } = useAuth();
  const [userData, setUserData] = useState({
    firstname: '',
    lastname: '',
    email: '', 
    contactNumber: '',
...
      }
    } catch (error) {
      setError(error.message || 'Failed to load profile data');
      Alert.alert(
        'Error',
        error.message,
        [{ text: 'OK', onPress: () => setError(null) }]
      );
    }
  };

  useEffect(() => {
    if (user?.id) {
...
                  city: city,
                  barangay: barangay
                }));


                Alert.alert(
                  "Success",
                  "Profile updated successfully",
                  [
                    {
                      text: "OK",
                      onPress: () => {
                         router.back();
...
    >
      <ScrollView className="mt-10">
        <SafeAreaView className="px-6 w-full h-full mb-12">
          {/* Header */}
          <View className="flex-row items-center mb-6">
            <Feather name="chevron-left" size={36} color="black" onPress={handleBack} />
            <Text className="font-bold text-[28px] ml-3 text-gray-800">Edit Profile</Text>
          </View>

          {/* Profile Picture */}
          <View className="items-center mb-8">
            <Menu
              visible={imageMenuVisible}
...
                 <Menu.Item
                   title="Remove Photo"
                   leadingIcon="delete"
                   onPress={() => {
                     setImageMenuVisible(false);
                     setProfileImage(null); // Set local state to null
                     // Note: The actual removal from the backend will happen on "Apply Changes"
                   }}
                   titleStyle={{ fontSize: 13 }}
                 />
              )}
            </Menu>
            {/* Display user's full name */}
...

            {/* First and Last Name */}
            <View className="flex-row justify-between mb-4">
              <View className="w-[48%]">
                <Text className="text-base text-gray-700">First Name</Text>
                <TextInput
                  testID="inputFirstname"
                  className="border border-gray-400 rounded-md p-1 pl-3 mt-2 text-sm text-gray-800"
                  placeholder="Firstname"
                  placeholderTextColor="#9ca3af"
                  value={firstName}
                  onChangeText={setFirstName}
                />
...
