...
            error={!!error}
          />
          {error && <Text style={{ color: 'red', marginTop: 5 }}>{error}</Text>}

          {/* Send OTP Button */}
          <CustomButton
            title={isSubmitting ? "Sending..." : "Send OTP"}
            containerStyles="w-full mt-6"
            handlePress={handleVerification}
            disabled={isSubmitting || email.trim() === "" || !validateEmail(email)}
          />

          {/* Back to Log-In */}
...
