# User captures a rice leaf image

appId: host.exp.exponent

---
- launchApp

# Tap on PAL-AI
- tapOn: "PAL-AI"

# Navigate to Login
- tapOn:
    id: "login"

# Tap on Username / Email
- tapOn: "Username / Email"
- inputText: "joemarygot@gmail.com"

- hideKeyboard

# Tap on Password
- tapOn: "Password"
- inputText: "Chaesessional0#"

- hideKeyboard

# Tap on Login button
- tapOn: "login"

# Tap on Capture Button
- tapOn:
    id: "captureBtn"

# Tap on Camera
- tapOn:
    id: "capture"

# Tap on Check
- tapOn:
    id: "check"

- assertVisible: "Result"
