#appId: "host.exp.Exponent"
appId: "dev.expo.palai"
---
# Launch the app and clear its state
- launchApp

# Assert the initial welcome text is visible (assertVisible includes a wait)
- extendedWaitUntil:
    visible: "GET STARTED.*"
- extendedWaitUntil:
    visible: "Have an account?.*"
- extendedWaitUntil:
    visible: "Login"

# Verify the main buttons are visible after loading
- assertVisible: "GET STARTED.*"
- assertVisible: "Have an account?.*"
- assertVisible: ".*Login.*"

# Test the GET STARTED button flow
- tapOn: "Login"

# Test Values
- waitForAnimationToEnd

- tapOn: {id : "userLOGIN"}
- inputText: "johnhenrytero18@gmail.com"

- tapOn: {id : "passLOGIN"}
- inputText: "Admin@123"

- tapOn: "Log in"

- extendedWaitUntil:
    visible: ".*Today.*"

- tapOn: "Profile"

- scrollUntilVisible:
    element: "Edit Profile" 
    direction: DOWN

- tapOn: "Edit Profile"

- tapOn: "inputFirstname"
- inputText: ""

- scrollUntilVisible:
    element: "Apply Changes" 
    direction: DOWN

- assertNotVisible:
    text: "Apply Changes"
    enabled: true

# End of the test flow