#appId: "host.exp.Exponent"
appId: "dev.expo.palai"
---
# Launch the app and clear its state
- launchApp

# Assert the initial welcome text is visible (assertVisible includes a wait)
- assertVisible: "WELCOME TO PAL-AI.*"
- extendedWaitUntil:
    visible: "GET STARTED.*"
- extendedWaitUntil:
    visible: "Have an account?.*"
- extendedWaitUntil:
    visible: "Login"

# Verify the main buttons are visible after loading
- assertVisible: "GET STARTED.*"
- assertVisible: "Have an account?.*"
- assertVisible: ".*Login.*"

# Test the GET STARTED button flow
- tapOn: 'Login'
# assertVisible will wait for the "Sign Up"
- assertVisible: "PAL-AI.*"

# Test Values
- tapOn: {id : "inputUsername"}
- inputText: "johnhenrytero18@gmail.com"

- tapOn: {id : "inputPassword"}
- inputText: "Admin@123"

- tapOn: "Log in"

- assertVisible: ".*Today.*"

# End of the test flow